--- a/index.Rmd
+++ b/index.Rmd
@@ -53,7 +53,10 @@ mod <- mvgam(y ~ s(season, bs = 'cc', k = 7) +
 
 Plot the estimated posterior hindcast and forecast distributions for each series
 ```{r eval = FALSE}
-plot(mod, type = 'forecast', newdata = data$data_test, series = 2)
+layout(matrix(1:4, nrow = 2, byrow = TRUE))
+for(i in 1:3){
+  plot(mod, type = 'forecast', series = i)
+}
 ```
 
 ![](man/figures/README-beta_fc-1.png)
